# mgapi

./: .env.example  .gitignore  README.md  TESTING.md  pyproject.toml  run_tests.sh  settings.toml  test_config.csv  test_server.py  test_users.csv  test_workflow.py
src/mgapi/: __init__.py  __main__.py  api_client.py  cli.py  config.py  server.py
src/mgapi/commands/: __init__.py  batch.py  close.py  endpoints.py  info.py  send.py  start.py  status.py
src/mgapi/core/: __init__.py  client.py  close.py  endpoints.py  server.py
src/mgapi/processors/: __init__.py  base.py  config_spec.py  user_spec.py
src/mgapi/utils/: __init__.py  file_manager.py  formatters.py  logger.py  validators.py
tests/: __init__.py  conftest.py  test_cli.py
tests/test_commands/: __init__.py  test_status.py
